# CoolFool

./: .gitignore  README.md  main.py  pyproject.toml  readme_template.md  requirements.txt
.github/workflows/: update.yml
