[tool.poetry]
name = "coolfool"
version = "0.1.0"
description = ""
authors = ["coolfool <coolfool149@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
PyGithub = "^1.55"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
